[package]
name = "certes-interceptor-ebpf"
version = "0.1.0"
edition.workspace = true

[dependencies]
certes-interceptor-common = { path = "../certes-interceptor-common" }

aya-ebpf = { workspace = true }
aya-log-ebpf = { workspace = true }

[build-dependencies]
which = { workspace = true }

[[bin]]
name = "certes-interceptor"
path = "src/main.rs"
